<resources>
    <string name="app_name">IO21Task</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pif_academy">PIF Academy</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_contine">Please login to continue</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="not_member">Not a PIF Academy student?</string>
    <string name="continue_as_guest">Continue as a Guest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_vr">VR</string>
    <string name="title_home">Home</string>
    <string name="title_more">More</string>
    <string name="search_hint">Search events</string>
    <string name="ar_learning">AR Learning</string>
    <string name="pif_academy_info">PIF Academy Information</string>
</resources>